chore: remove css (for now)

--- a/src/app.css
+++ b/src/app.css
@@ -18,36 +18,34 @@
 	--background-without-opacity: rgba(255, 255, 255, 0.7);
 	--column-width: 42rem;
 	--column-margin-top: 4rem;
-
-
 }
 
 body {
-	min-height: 100vh;
-	margin: 0;
-	background-color: var(--primary-color);
-	background: linear-gradient(
-		180deg,
-		var(--primary-color) 0%,
-		var(--secondary-color) 10.45%,
-		var(--tertiary-color) 41.35%
-	);
+	/*min-height: 100vh;*/
+	/*margin: 0;*/
+	/*background-color: var(--primary-color);*/
+	/*background: linear-gradient(*/
+	/*	180deg,*/
+	/*	var(--primary-color) 0%,*/
+	/*	var(--secondary-color) 10.45%,*/
+	/*	var(--tertiary-color) 41.35%*/
+	/*);*/
 }
 
 body::before {
-	content: '';
-	width: 80vw;
-	height: 100vh;
-	position: absolute;
-	top: 0;
-	left: 10vw;
-	z-index: -1;
-	background: radial-gradient(
-		50% 50% at 50% 50%,
-		var(--pure-white) 0%,
-		rgba(255, 255, 255, 0) 100%
-	);
-	opacity: 0.05;
+	/*content: '';*/
+	/*width: 80vw;*/
+	/*height: 100vh;*/
+	/*position: absolute;*/
+	/*top: 0;*/
+	/*left: 10vw;*/
+	/*z-index: -1;*/
+	/*background: radial-gradient(*/
+	/*	50% 50% at 50% 50%,*/
+	/*	var(--pure-white) 0%,*/
+	/*	rgba(255, 255, 255, 0) 100%*/
+	/*);*/
+	/*opacity: 0.05;*/
 }
 
 /*#svelte {*/
@@ -98,8 +96,8 @@ pre {
 
 input,
 button {
-	font-size: inherit;
-	font-family: inherit;
+	/*font-size: inherit;*/
+	/*font-family: inherit;*/
 }
 
 button:focus:not(:focus-visible) {
